Update : add delete and edit class Fix: make file readable

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,8 +16,10 @@ body
   animation: fadein 3s;
   scroll-behavior: smooth;
 }
-
-
+span
+{
+  font-size: 1vw;
+}
 /* style legend */
 legend
 {
@@ -460,7 +462,7 @@ a
   float: left;
   margin-left: 1%;
   border-radius: 10px;
-  width: 60%;
+  width: 82%;
   overflow-x: hidden;
   overflow-y: scroll;
   height: 110vh;
@@ -542,12 +544,13 @@ h4{
   font-size: 1vw;
   color: ghostwhite;
   opacity: 0.8;
+  float: left;
 }
 
 /*style profile pic*/
 .user_image img{
-  width: 8%;
-  height:8%;
+  width: 5%;
+  height:5%;
   border-radius: 50px;
   float: left;
   margin-right: 1%;
@@ -562,6 +565,29 @@ h4{
   overflow-y: scroll;
   overflow-x: hidden;
   height: 110vh;
+}
+
+.delete
+{
+  width: 5%;
+  padding: 0.5%;
+  font-size: 0.8vw;
+  background-color: red;
+  margin-left: .2%;
+  opacity: 0.3;
+}
+
+.edit{
+  width: 5%;
+  padding: 0.5%;
+  font-size: 0.8vw;
+  margin-left: 1%;
+  background-color: blue;
+  opacity: 0.3;
+}
+
+.edit:hover ,.delete:hover{
+  opacity: 1;
 }
 
 .user_holder{
